RESOLVED FIXED172842
LibWebRTC might crash with frames having a null width or height
https://bugs.webkit.org/show_bug.cgi?id=172842
Summary LibWebRTC might crash with frames having a null width or height
youenn fablet
Reported 2017-06-01 17:18:27 PDT
LibWebRTC buffer pool may return a null buffer
Attachments
Patch (2.52 KB, patch)
2017-06-01 17:44 PDT, youenn fablet
no flags
Patch (2.75 KB, patch)
2017-06-01 19:03 PDT, youenn fablet
no flags
Patch (2.85 KB, patch)
2017-06-01 19:05 PDT, youenn fablet
no flags
Patch (2.91 KB, patch)
2017-06-01 19:13 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-06-01 17:44:13 PDT
youenn fablet
Comment 2 2017-06-01 19:03:30 PDT
youenn fablet
Comment 3 2017-06-01 19:05:30 PDT
youenn fablet
Comment 4 2017-06-01 19:08:42 PDT
Radar WebKit Bug Importer
Comment 5 2017-06-01 19:09:52 PDT
youenn fablet
Comment 6 2017-06-01 19:13:41 PDT
Jon Lee
Comment 7 2017-06-01 19:20:59 PDT
rdar://problem/32514813 Please file a follow-up bug to test this
WebKit Commit Bot
Comment 8 2017-06-01 19:50:54 PDT
Comment on attachment 311795 [details] Patch Clearing flags on attachment: 311795 Committed r217692: <http://trac.webkit.org/changeset/217692>
WebKit Commit Bot
Comment 9 2017-06-01 19:50:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.