LibWebRTC might crash with frames having a null width or height https://bugs.webkit.org/show_bug.cgi?id=172842 <rdar://problem/32514813>

Patch by Youenn Fablet <youenn@apple.com> on 2017-06-01
Reviewed by Jon Lee.

Do not send black frames in case the video width or height is zero.
Also ensure that even if a null buffer is returned by the pool, no crash might actually happen.

* platform/mediastream/mac/RealtimeOutgoingVideoSource.cpp:
(WebCore::RealtimeOutgoingVideoSource::sendBlackFramesIfNeeded):
(WebCore::RealtimeOutgoingVideoSource::videoSampleAvailable):

Canonical link: https://commits.webkit.org/189728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217692 268f45cc-cd09-0410-ab3c-d52691b4dbfc